--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
 <head>
   <meta charset="utf-8">
   <title>TinDog</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
 </head>
+
+<!--Google Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Ubuntu&display=swap" rel="stylesheet">
+
+<!-- CSS stylesheets -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <link rel="stylesheet" href="css/styles.css">
+
+<!-- Font Awesome -->
+<script src="https://kit.fontawesome.com/10bfb776e2.js" crossorigin="anonymous"></script>
+
+<!-- Bootstrap scripts -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -33,13 +46,13 @@
           <ul class="navbar-nav ms-auto">
 
             <li class="nav-item">
-              <a class="nav-link" href=""> Contact </a>
+              <a class="nav-link" href="#footer"> Contact </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href=""> Pricing </a>
+              <a class="nav-link" href="#pricing"> Pricing </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href=""> Download </a>
+              <a class="nav-link" href="#cta"> Download </a>
             </li>
           </ul>
         </div>
@@ -50,16 +63,17 @@
 
       <!-- Title -->
 
-      <div class="row">
-        <div class="col-lg-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
-          <button type="button">Download</button>
-          <button type="button">Download</button>
+      <div class="title-section row">
+        <div class="meet-title-btns col-lg-6">
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
+          <button type="button" class=" btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i> Download</button>
+          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
         </div>
 
 
-        <div class="col-lg-6">
-          <img src="images/iphone6.png" alt="iphone-mockup">
+        <div class="phone-image-div col-lg-6">
+          <!-- d-none and d-lg-block make the image disappear on medium to large screens -->
+          <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
 
@@ -70,16 +84,27 @@
   <!-- Features -->
 
   <section id="features">
+    <div class="container-fluid">
 
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
+    <div class="row">
 
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
-
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
-
+      <div class="feature-box col-lg-4">
+        <i class="fa-solid fa-circle-check fa-4x icons"></i>
+        <h3 class="feature-title">Easy to use.</h3>
+        <p>So easy to use, even your dog could do it.</p>
+      </div>
+      <div class=" feature-box col-lg-4">
+        <i class="fa-solid fa-bullseye fa-4x icons"></i>
+        <h3 class="feature-title">Elite Clientele</h3>
+        <p>We have all the dogs, the greatest dogs.</p>
+      </div>
+      <div class="feature-box col-lg-4">
+        <i class="fa-solid fa-heart fa-4x icons"></i>
+        <h3 class="feature-title">Guaranteed to work.</h3>
+        <p>Find the love of your dog's life or your money back.</p>
+      </div>
+    </div>
+  </div>
   </section>
 
 
@@ -87,24 +112,38 @@
 
   <section id="testimonials">
 
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
-
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
-
+    <div id="testimonials-carousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner ">
+        <div class="carousel-item active container-fluid">
+          <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
+          <em>Pebbles, New York</em>
+        </div>
+        <div class="carousel-item container-fluid">
+          <<h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+            <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+            <em>Beverly, Illinois</em>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#testimonials-carousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#testimonials-carousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
   </section>
 
 
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
 
   </section>
 
@@ -113,57 +152,103 @@
 
   <section id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
-
+    <div class="pricing-column">
+    <div class="row">
+    <!-- lg-4 for large display, sm-6 for tabs, col-12 for small display -->
+    <div class="col-lg-4 col-md-6 col-12">
+   <!-- card h-100 will make all cards of same height also each card has header body and footer -->
+    <div class="card h-100 ">
+    <div class="card-header">
     <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
+    </div>
+    <div class="card-body">
+    <h2 class="price-text">Free</h2>
+    <p class="card-text">5 Matches Per Day</p>
+    <p class="card-text">10 Messages Per Day</p>
+    <p class="card-text">Unlimited App Usage</p>
+    </div>
+    <div class="card-footer">
+    <!-- mx-auto makes the button to align center   -->
+    <div class="col-6 mx-auto d-grid gap-2">
+    <button class="btn btn-outline-dark col-12" type="button">Sign up</button>
+    </div>
+    </div>
+    </div>
+    </div>
+    <div class="col-lg-4 col-md-6 col-12">
+    <div class="card h-100">
+    <div class="card-header">
     <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
+    </div>
+    <div class="card-body">
+    <h2 class="price-text">$49 / mo</h2>
+    <p class="card-text">Unlimited Matches</p>
+    <p class="card-text">Unlimited Messages</p>
+    <p class="card-text">Unlimited App Usage</p>
+    </div>
+    <div class="card-footer">
+    <div class="col-6 mx-auto">
+    <button class="btn btn-dark col-12" type="button">Sign up</button>
+    </div>
+    </div>
+    </div>
+    </div>
+    <div class="col-lg-4 col-sm-12 col-12">
+    <div class="card h-100">
+    <div class="card-header">
     <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+    </div>
+    <div class="card-body">
+    <h2 class="price-text">$99 / mo</h2>
+    <p class="card-text">Priority Listing</p>
+    <p class="card-text">Unlimited Matches</p>
+    <p class="card-text">Unlimited Messages</p>
+    <p class="card-text">Unlimited App Usage</p>
+    </div>
+    <div class="card-footer">
+    <div class="col-6 mx-auto">
+    <button class="btn btn-dark col-12" type="button">Sign up</button>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
 
   </section>
 
 
   <!-- Call to Action -->
+.
+
 
   <section id="cta">
-
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
-
+<div class="container-fluid">
+    <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class=" btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
+</div>
   </section>
 
 
   <!-- Footer -->
 
   <footer id="footer">
-
+    <div class="container-fluid">
+<p>
+  <i class="social-icons fa-brands fa-twitter"></i>
+   <i class="social-icons fa-brands fa-facebook-f"></i>
+   <i class="social-icons fa-brands fa-instagram"></i>
+    <i class="social-icons fa-solid fa-envelope"></i>
+</p>
     <p>© Copyright TinDog</p>
-
+</div>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
