--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
 
-  <section id="title">
+  <section class="red-section" id="title">
     <div class="container-fluid">
 
 
@@ -83,7 +83,7 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section class="white-section" id="features">
     <div class="container-fluid">
 
     <div class="row">
@@ -110,7 +110,7 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="red-section" id="testimonials">
 
     <div id="testimonials-carousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner ">
@@ -139,7 +139,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section class="red-section"id="press">
     <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
@@ -150,7 +150,7 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section class="white-section" id="pricing">
 
     <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
@@ -225,7 +225,7 @@
 .
 
 
-  <section id="cta">
+  <section class="red-section"id="cta">
 <div class="container-fluid">
     <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
     <button type="button" class=" btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i> Download</button>
@@ -236,7 +236,7 @@
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer class="white-section" id="footer">
     <div class="container-fluid">
 <p>
   <i class="social-icons fa-brands fa-twitter"></i>
